# personal-test-cmake-git-ndk-adb

./: CMakeLists.txt  CmakeConfig.h.in  README.md  build.sh  build_mv.sh  run.sh
MathFunctions/: CMakeLists.txt  MyMath.h
source/: MyMath.cpp  test.cpp
test/: test.cpp
